| Bug #60079 | dict_load_table_on_id() can scan too many records | ||
|---|---|---|---|
| Submitted: | 10 Feb 2011 9:00 | Modified: | 15 Oct 2012 13:52 |
| Reporter: | Marko Mäkelä | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: InnoDB storage engine | Severity: | S3 (Non-critical) |
| Version: | 5.1+ | OS: | Any |
| Assigned to: | Marko Mäkelä | CPU Architecture: | Any |
| Tags: | data dictionary, DDL, innodb | ||
[10 Feb 2011 9:00]
Marko Mäkelä
[10 Feb 2011 9:17]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/130978
[10 Feb 2011 9:17]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/130979
[15 Oct 2012 13:52]
Erlend Dahl
Fixed in 5.6.2
