Bug #60079 dict_load_table_on_id() can scan too many records

dict_load_table_on_id(): Only check the delete-mark flag on records
that match table_id. Replace goto func_exit with nested if-else.